# evidenceops

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: dashboard.py  evaluations.py  health.py  tasks.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/domain/: enums.py  schemas.py
backend/app/evaluation/: runner.py  scorers.py  taskbench.py
backend/app/fixtures/: demo_documents.py
backend/app/llm/: base.py  providers.py
backend/app/observability/: tracing.py
backend/app/repositories/: __init__.py  runs.py
backend/app/retrieval/: hybrid.py  store.py  tokenizer.py
backend/app/services/: seed_demo.py  task_service.py
backend/app/tools/: spreadsheet.py  web_research.py
backend/app/verification/: claims.py  quality.py
backend/app/workflow/: graph.py  nodes.py  state.py
backend/data/demo/: vendor_pricing.csv
backend/data/taskbench/: cases.json
backend/tests/: conftest.py  test_api.py  test_evaluation.py  test_pricing.py  test_retrieval.py  test_verification.py  test_workflow.py
docs/: architecture.md  demo_walkthrough.md  evaluation_protocol.md  model_routing.md  threat_model.md  validation.md
docs/adr/: 0001-bounded-state-graph.md  0002-deterministic-verification.md
frontend/: eslint.config.mjs  package-lock.json  package.json
scripts/: bootstrap_demo.sh  run_demo_request.sh  run_taskbench.sh
(+15 files in other folders)
