[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "evidenceops-api"
version = "0.1.0"
description = "Governed decision-brief agent and evaluation control plane"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EvidenceOps contributors" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "langgraph>=0.2,<2.0",
  "httpx>=0.27,<1.0",
  "pandas>=2.2,<3.0",
  "PyYAML>=6.0,<7.0",
  "opentelemetry-api>=1.28,<2.0",
  "opentelemetry-sdk>=1.28,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.28,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
  "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008", "E501", "UP017", "UP037"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
